# openshift-poc

./: compare_nodes_netscan.ipynb  prometheus.ipynb  pyproject.toml
